--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: BY Blog
-SEOTitle: StephenGao's Blog | BY Mingdy Gao
+title: StephenGao Blog
+SEOTitle: StephenGao's Blog | Stephen的博客
 header-img: img/post-bg-desk.jpg
 email: stephengao12@gmail.com
-description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, StephenGao的博客, StephenGao, Java, Computer Science, Software Engineer"
+description: "Stephen's paradise"
+keyword: "StephenGao的博客, StephenGao, Java, Computer Science, Software Engineer"
 url: "https://mingdi-gao.github.io/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/mingdi-gao/mingdi-gao.github.io.git" # you code repository
@@ -74,11 +74,11 @@ gitalk:
 
 # Analytics settings
 # Baidu Analytics
-ba_track_id: b50bf2b12b5338a1845e33832976fd68
+#ba_track_id: b50bf2b12b5338a1845e33832976fd68
 
 # Google Analytics
-ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
-ga_domain: qiubaiying.top               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+#ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
+#ga_domain: qiubaiying.top               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
 
@@ -99,11 +99,11 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "WY",
-        href: "http://zhengwuyang.com"
+        title: "",
+        href: ""
     },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
+        title: "",
+        href: "
     },{
         title: "Apple",
         href: "https://apple.com"
