--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ friends: [
         href: ""
     },{
         title: "",
-        href: "
+        href: ""
     },{
         title: "Apple",
         href: "https://apple.com"
